# volunteer-recognition-system

./: README.md  backend  frontend  pyproject.toml  pyvenv.cfg  requirements.txt  script.js  styles.css
Scripts/: activate  activate.bat
app/: __init__.py  email.py  extensions.py  forms.py  models.py  routes.py
backend/: main.py
backend/app/: __init__.py  forms.py  models.py  routes.py
frontend/: index.html  script.js  styles.css
migrations/versions/: 246aa1c53d07_added_role_column_to_user_model.py  c53ee142d668_adding_volunteering_hours_to_user.py
static/css/: main.css
static/js/: main.js
templates/: add_hours.html  add_user.html  base.html  create_event.html  edit_profile.html  events.html  home.html  index.html  leaderboard.html  manage_memberships.html  remove_user.html  rewards.html  user.html  view_database.html
templates/auth/: register.html
tests/: conftest.py  test_app.py  test_forms.py  test_models.py
